<resources>
    <string name="app_name">CurrieStarColts</string>
    <string name="Welcome">Welcome</string>
    <string name="greeting">The Future\'s Bright It\'s Blue and White</string>
    <string name="title_activity_maps">Map</string>
    <string name="About">About</string>
    <string name="Message">This app was designed by Graeme Doran as part of his Software Development Course</string>
    <string name="addButton">ADD</string>
    <string name="editButton">EDIT</string>
    <string name="deleteButton">DELETE</string>
    <string name="squad_button">TEAM</string>
    <string name="Name">Name</string>
    <string name="Contact">Contact</string>
    <string name="address">address</string>
    <string name="Email">E-mail</string>
    <string name="telephone">Telephone</string>
    <string name="toggle_button">switch</string>
    <string name="edit_button">EDIT</string>
    <string name="number" />
    <string name="squad_number" />
    <string name="team_number">Squad Number</string>
    <string name="position">Position</string>
    <string name="addPlayer">Commit</string>
    <string name="opposition">Opponents</string>
    <string name="new_team">new_team</string>
    <string name="CSC">Currie Star Colts Season 17/18</string>
    <string name="team">New Team</string>
    <string name="newTeam">Team Name</string>
    <string name="Location">Location</string>
    <string name="mess">this app was designed and built as part of his Software Developement Course @ CodeClan</string>
    <string name="message2">This App was designed and built by Graeme Doran as part of his Software Development Course @ CodeClan Edinburgh</string>
</resources>
