<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_team_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    tools:context="com.example.graemedoran.curriestarcolts.Opposition.OppControllers.OpponentsActivity">

    <EditText
        android:id="@+id/input_team_name"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="244dp"
        android:ems="10"
        android:hint="@string/newTeam"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/newTeam" />

    <EditText
        android:id="@+id/input_contact_name"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/Contact"
        android:inputType="none|textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_team_name"
        tools:text="@string/Contact" />

    <Button
        android:id="@+id/butto_add_team"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="addTeam"
        android:text="@string/new_team"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_contact_name"
        app:layout_constraintVertical_bias="0.208"
        tools:text="@string/new_team" />
</android.support.constraint.ConstraintLayout>
